'new_img_and_founders'

--- a/about.html
+++ b/about.html
@@ -202,16 +202,18 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<div class="sec-title">
-						<h1><span>Our Expert </span>Employees</h1>
+						<h1><span>Founders</span></h1>
+						<!--
 						<p>Lorem ipsum dolor sit amet, pellentesque enim lorem quis vivamus amet.</p>
+						-->
 					</div>
 				</div>
 			</div>		
 			<div class="row">		
-				<div class="col-md-3 col-sm-6 col-xs-12">
+				<div class="col-md-6 col-sm-6 col-xs-12">
 					<div class="team-member">
 						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
-							<img src="img/tm.jpg" alt=""/>
+							<img src="img/founder1.jpg" alt=""/>
 							<div class="team-overlay">
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -222,65 +224,49 @@
 								</ul>							
 							</div>							
 						</div>
-						<h2>Gabriella</h2>
-						<h3>Window Cleaner</h3>						
+						<h2>Mo Choumil</h2>
+						<h3>Founder</h3>
 					</div>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="340ms">
-							<img src="img/tm2.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Brianna</h2>
-						<h3>Apartment Cleaner</h3>						
-					</div>
-				</div>					
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="340ms">
-							<img src="img/tm3.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Mackenzie</h2>
-						<h3>House Cleaner</h3>						
-					</div>
-				</div>	
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<div class="team-member">
-						<div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="350ms">
-							<img src="img/tm4.jpg" alt=""/>
-							<div class="team-overlay">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google"></i></a></li>
-									<li><a href="#"><i class="fa fa-skype"></i></a></li>
-								</ul>							
-							</div>							
-						</div>
-						<h2>Amelia</h2>
-						<h3>Window Cleaner</h3>						
-					</div>
+				<div class="col-md-6 col-sm-6 col-xs-12">
+						<p>I was born and raised in Casablanca Morocco. My passion for exploration fueled a desire in me to set out on my own and come to the United States.
+                           I borrowed $500 from my aunt for a plane ticket and that was my first step into the unknown. I managed to put myself through college while working
+                           full time in the service industry. Going to school and paying out of state tuition was not easy but it taught me that if you work hard, you can accomplish
+                           anything you set your mind to do.
+                        </p>
+				</div>
+            </div>
+                <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <p>
+                        For nearly half a decade, Imran Khan has been leading change and innovation as a teacher in one of the “the most dangerous” schools in the nation, Harper High School.
+                        His innovative models are now being utilized by other networks in Chicago Public Schools and are restructuring approaches to skill acquisition and academic interventions.
+                        Imran has received four consecutive Medal Awards for highest student achievement from the CPS Office of School Improvement and was a finalist for the Chicago DRIVE award.
+                        He is the co-founder and CEO of Embarc, a multi-award winning post-secondary success program that is using experiential education to change the trajectories of lives.
+                        Under his leadership, Embarc has grown from 25 students in one school to nearly 460 in nine different Chicago Public High Schools
+                    </p>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="team-member">
+                        <div class="team-thumb wow slideInUp"  data-wow-duration="1000ms" data-wow-delay="330ms">
+                            <img src="img/founder2.jpg" alt=""/>
+                            <div class="team-overlay">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Mo Choumil</h2>
+                        <h3>Founder</h3>
+                    </div>
+                </div>
+                </div>
 				</div>																			
-			</div>			     
+
 		</div>	
 	</div>	
 	<!-- Team Section End -->			
@@ -385,17 +371,20 @@
 		</div>
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
-		<div class="footer-bottom-sec">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="copy-right">
-							<p>&copy; Copyright 2017 <span><a href="#">themeearth,</a></span> Designed by:<span> David Max</span></p>
-						</div>
-					</div>					
-				</div>
-			</div>
-		</div>
+        <div class="footer-bottom-sec">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copy-right ">
+                        <p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="copy-right ">
+                        <p>LOGO</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 		<!-- Footer Bottom Section End -->
 	</footer>
 	<!-- Footer Section End -->
