--- a/bankers.html
+++ b/bankers.html
@@ -148,8 +148,8 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<div class="sec-title">
-						<h1><span>Our</span> Service</h1>
-						<p>Lorem ipsum dolor sit amet, pellentesque enim lorem quis vivamus amet.</p>
+						<h1><span>Bankers</span></h1>
+						<p>Click the headings below to read about the Citywide Title business processes..</p>
 					</div>
 				</div>
 			</div>
@@ -324,13 +324,16 @@
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
 		<div class="footer-bottom-sec">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="copy-right">
-							<p>&copy; Copyright 2017 <span><a href="#">themeearth,</a></span> Designed by:<span> David Max</span></p>
-						</div>
-					</div>					
+			<div class="row">
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>LOGO</p>
+					</div>
 				</div>
 			</div>
 		</div>
