--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	<!-- Slider Section Start -->
 	<div class="slider index2">
 		<div class="all-slide owl-item">					
-			<div class="single-slide" style="background-image:url(img/slide2.jpg);">
+			<div class="single-slide" style="background-image:url(img/444.jpg);">
 				<div class="slider-overlay"></div>
 				<div class="slider-text">					
 					<div class="slider-wraper">					
@@ -140,7 +140,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="single-slide" style="background-image:url(img/slide1.jpg);">
+			<div class="single-slide" style="background-image:url(img/dom2.jpg);">
 				<div class="slider-overlay"></div>
 				<div class="slider-text">
 					<div class="slider-wraper">
@@ -1127,15 +1127,20 @@
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
 		<div class="footer-bottom-sec">
-			<div class="container">
+
 				<div class="row">
-					<div class="col-md-12">
-						<div class="copy-right">
-							<p>&copy; Copyright 2017 <span><a href="#">themeearth,</a></span> Designed by:<span> David Max</span></p>
+					<div class="col-md-6">
+						<div class="copy-right ">
+							<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
 						</div>
-					</div>					
+					</div>
+					<div class="col-md-6">
+						<div class="copy-right ">
+							<p>LOGO</p>
+						</div>
+					</div>
 				</div>
-			</div>
+
 		</div>
 		<!-- Footer Bottom Section End -->
 	</footer>
