--- a/real-estate-glossary.html
+++ b/real-estate-glossary.html
@@ -610,17 +610,20 @@
 		</div>
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
-		<div class="footer-bottom-sec">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="copy-right">
-							<p>&copy; Copyright 2017 <span><a href="#">themeearth,</a></span> Designed by:<span> David Max</span></p>
-						</div>
-					</div>					
-				</div>
-			</div>
-		</div>
+        <div class="footer-bottom-sec">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copy-right ">
+                        <p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="copy-right ">
+                        <p>LOGO</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 		<!-- Footer Bottom Section End -->
 	</footer>
 	<!-- Footer Section End -->
