--- a/why-title-insurance.html
+++ b/why-title-insurance.html
@@ -286,13 +286,16 @@
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
 		<div class="footer-bottom-sec">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="copy-right">
-							<p>&copy; Copyright 2017 <span><a href="#">themeearth,</a></span> Designed by:<span> David Max</span></p>
-						</div>
-					</div>					
+			<div class="row">
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>LOGO</p>
+					</div>
 				</div>
 			</div>
 		</div>
