--- a/about.html
+++ b/about.html
@@ -218,7 +218,7 @@
 								<ul>
 									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/mo-choumil-72954a27/"><i class="fa fa-linkedin"></i></a></li>
 									<li><a href="#"><i class="fa fa-google"></i></a></li>
 									<li><a href="#"><i class="fa fa-skype"></i></a></li>
 								</ul>							
@@ -254,13 +254,13 @@
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/imran-khan-47672423/"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="#"><i class="fa fa-google"></i></a></li>
                                     <li><a href="#"><i class="fa fa-skype"></i></a></li>
                                 </ul>
                             </div>
                         </div>
-                        <h2>Mo Choumil</h2>
+                        <h2>Imran Khan</h2>
                         <h3>Founder</h3>
                     </div>
                 </div>
