--- a/about.html
+++ b/about.html
@@ -380,7 +380,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="copy-right ">
-                        <p>LOGO</p>
+                        <p><img src="img/mps_logo.png" style="width: 15%"></p>
                     </div>
                 </div>
             </div>
