--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<div class="sec-title">
-						<h1><span>Our</span> Service</h1>
-						<p>Lorem ipsum dolor sit amet, pellentesque enim lorem quis vivamus amet.</p>
+						<h1><span>Service We work with.. Why</span> you need Atlas Title?</h1>
+
 					</div>
 				</div>
 			</div>		
@@ -215,31 +215,24 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="service2-inner">
 							<div class="media">
-								<div class="media-left">
-									<div class="service2-icon">
-										<img src="img/icon/window.png" alt=""/>
-									</div>					
-								</div>					
-								<div class="media-body">				
-									<div class="service2-details">						
-										<h2><a href="service-details.html">Window cleaning</a></h2>
-										<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim</p>
-									</div>							
-								</div>							
-							</div>							
-						</div>							
-					</div>																																	<div class="col-md-4 col-sm-6">
+								<img src="img/front2_1.jpg" class="services-img">
+								<div class="media-body">
+									<div class="service2-details">
+										<h2>RESIDENTIAL</h2>
+										<p>Title to a commercial property is generally more complex and involves a detailed escrow process. Saturn’s title agents are well prepared for it.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-6">
 						<div class="service2-inner">
 							<div class="media">
-								<div class="media-left">
-									<div class="service2-icon">
-										<img src="img/icon/floor.png" alt=""/>
-									</div>					
-								</div>					
+								<img src="img/kentucky-commercial-real-estate.jpg" class="services-img">
 								<div class="media-body">				
 									<div class="service2-details">						
-										<h2><a href="service-details.html">Floor cleaning</a></h2>
-										<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim.</p>
+										<h2>COMMERCIAL</h2>
+										<p>Title to a commercial property is generally more complex and involves a detailed escrow process. Saturn’s title agents are well prepared for it.</p>
 									</div>							
 								</div>							
 							</div>							
@@ -248,77 +241,23 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="service2-inner">
 							<div class="media">
-								<div class="media-left">
-									<div class="service2-icon">
-										<img src="img/icon/apartment.png" alt=""/>
-									</div>					
-								</div>					
-								<div class="media-body">				
-									<div class="service2-details">						
-										<h2><a href="service-details.html">Apartment Cleaning </a></h2>
-										<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim.</p>
-									</div>							
-								</div>							
-							</div>							
-						</div>							
-					</div>					
-					<div class="col-md-4 col-sm-6">
-						<div class="service2-inner">
-							<div class="media">
-								<div class="media-left">
-									<div class="service2-icon">
-										<img src="img/icon/house.png" alt=""/>
-									</div>					
-								</div>					
-								<div class="media-body">				
-									<div class="service2-details">						
-										<h2><a href="service-details.html">House Cleaning</a></h2>
-										<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim</p>
-									</div>							
-								</div>							
-							</div>							
-						</div>							
-					</div>																																	<div class="col-md-4 col-sm-6">
-						<div class="service2-inner">
-							<div class="media">
-								<div class="media-left">
-									<div class="service2-icon">
-										<img src="img/icon/kitchen.png" alt=""/>
-									</div>					
-								</div>					
-								<div class="media-body">				
-									<div class="service2-details">						
-										<h2><a href="service-details.html">Architectural Design </a></h2>
-										<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim.</p>
-									</div>							
-								</div>							
-							</div>							
+								<img src="img/home_investment_1024x706.jpg"  class="services-img">
+								<div class="media-body">
+									<div class="service2-details">
+										<h2>REFINANCING</h2>
+										<p>When it is time for you to refinance, you can choose your title company of preference, Saturn provides the tools for a very smooth closing.</p>
+									</div>
+								</div>
+							</div>
 						</div>							
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="service2-inner">
-							<div class="media">
-								<div class="media-left">
-									<div class="service2-icon">
-										<img src="img/icon/lemonade.png" alt=""/>
-									</div>					
-								</div>					
-								<div class="media-body">				
-									<div class="service2-details">						
-										<h2><a href="service-details.html">Glass Cleaning</a></h2>
-										<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim.</p>
-									</div>							
-								</div>							
-							</div>							
-						</div>							
-					</div>																												
 				</div>							
 			</div>
 		</div>		
 	</div>		
 	<!-- Service End -->	
 	
-	<!-- Project Section Start -->
+	<!-- Project Section Start -
 	<div class="project-sec pt-100 pb-80">
 		<div class="container">
 			<div class="row">
@@ -394,49 +333,7 @@
 								</div>
 							</div>
 						</div>						
-					</div>				
-					<div class="col-xs-6 col-sm-4 col-md-4 inner filtr-item Architectural Apartment">
-						<div class="item wow zoomIn"  data-wow-duration="1000ms" data-wow-delay="315ms">
-							<div class="project-thumb">
-								<img src="img/g4.jpg" alt="" />
-							</div>
-							<div class="project-hoverlay">
-								<div class="project-text">
-									<a href="img/g4.jpg" class="gallery-photo"><i class="fa fa-expand"></i></a>
-									<a href="project-details.html"><i class="fa fa-link"></i></a>									
-									<h3>Glass Cleaning</h3>
-								</div>
-							</div>
-						</div>						
-					</div>									
-					<div class="col-xs-6 col-sm-4 col-md-4 inner filtr-item Architectural">
-						<div class="item wow zoomIn"  data-wow-duration="1000ms" data-wow-delay="320ms">
-							<div class="project-thumb">
-								<img src="img/g5.jpg" alt="" />
-							</div>
-							<div class="project-hoverlay">
-								<div class="project-text">
-									<a href="img/g5.jpg" class="gallery-photo"><i class="fa fa-expand"></i></a>
-									<a href="project-details.html"><i class="fa fa-link"></i></a>									
-									<h3>House Cleaning</h3>
-								</div>
-							</div>
-						</div>						
-					</div>	
-					<div class="col-xs-6 col-sm-4 col-md-4 inner filtr-item Architectural Apartment">
-						<div class="item wow zoomIn"  data-wow-duration="1000ms" data-wow-delay="325ms">
-							<div class="project-thumb">
-								<img src="img/g6.jpg" alt="" />
-							</div>
-							<div class="project-hoverlay">
-								<div class="project-text">
-									<a href="img/g6.jpg" class="gallery-photo"><i class="fa fa-expand"></i></a>
-									<a href="project-details.html"><i class="fa fa-link"></i></a>									
-									<h3>Architectural Design </h3>
-								</div>
-							</div>
-						</div>						
-					</div>				
+					</div>
 				</div>		
 		</div>		
 	</div>
@@ -445,17 +342,18 @@
 	<div class="testimonial-sec pt-100 pb-100">
 		<div class="container">				
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-12">
 					<div class="testimonial-text">
 						<span class="tst-sbtitle">What's say about our client</span>	
 						<div class="sec-title">
 							<h1><span>Client</span> Review</h1>
 						</div>	
-						<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed enim varius enim, tellus tincidunt tellus est sed </p>
+						<p>selling text comes here.</p>
 						<a href="#">See All</a>
 						
 					</div>
 				</div>
+				<!--
 				<div class="col-md-8 no-padding">
 					<div class="all-testimonial">
 						<div class="single-testimonial">
@@ -544,12 +442,13 @@
 						</div>																													
 					</div>			
 				</div>
+				-->
 			</div>
 		</div>
 	</div>
 	<!-- Testimonial Section End -->		
 		
-	<!-- Team Section Start -->		
+	<!-- Team Section Start -
 	<div class="team-sec pt-100 pb-70">	
 		<div class="container">
 			<div class="row">
@@ -824,7 +723,7 @@
 		</div>		
 	</div>
 	<!-- Why Choose Us End -->	
-	<!-- Pricing Section Start -->	
+	<!-- Pricing Section Start -
 	<div class="pricing-sec pt-100 pb-100">
 		<div class="container">
 			<div class="row">
@@ -1127,20 +1026,18 @@
 		<!-- Footer Top Section End -->
 		<!-- Footer Bottom Section Start -->
 		<div class="footer-bottom-sec">
-
-				<div class="row">
-					<div class="col-md-6">
-						<div class="copy-right ">
-							<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="copy-right ">
-							<p>LOGO</p>
-						</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p>Proudly development by <b>Melting Pot Solutions LLC</b></p>
 					</div>
 				</div>
-
+				<div class="col-md-6">
+					<div class="copy-right ">
+						<p><img src="img/mps_logo.png" style="width: 15%"></p>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- Footer Bottom Section End -->
 	</footer>
