--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 	<div class="testimonial-sec pt-100 pb-100">
 		<div class="container">				
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-4">
 					<div class="testimonial-text">
 						<span class="tst-sbtitle">What's say about our client</span>	
 						<div class="sec-title">
@@ -353,7 +353,7 @@
 						
 					</div>
 				</div>
-				<!--
+
 				<div class="col-md-8 no-padding">
 					<div class="all-testimonial">
 						<div class="single-testimonial">
@@ -442,7 +442,6 @@
 						</div>																													
 					</div>			
 				</div>
-				-->
 			</div>
 		</div>
 	</div>
@@ -924,7 +923,7 @@
 	</div>
 	<!-- Blog Section End -->
 
-	<!-- All Patner Section Start -->
+	<!-- All Patner Section Start -
 	<div class="all-patner-sec">
 		<div class="container">
 			<div class="row">				
@@ -959,7 +958,7 @@
 		<div class="footer-sec">
 			<div class="container">
 				<div class="row">				
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-6 col-sm-6">
 						<div class="footer-wedget-one">
 							<a href="index.html"><img src="img/logo.png" alt=""/></a>
 							<p>Lorem ipsum dolor sit amet, nulla fermentum, mollis ac lectus nulla, vel neque, risus non nunc duis lectus, ac id porttitor vulputate donec sed.</p>
@@ -976,7 +975,7 @@
 						
 						</div>
 					</div>											
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-6 col-sm-6">
 						<div class="col-md-6 col-sm-6 no-padding">
 							<div class="footer-widget-menu">
 								<h2>quick links</h2>
@@ -1003,7 +1002,8 @@
 								</ul>
 							</div>
 						</div>
-					</div>	
+					</div>
+					<!--
 					<div class="col-md-4 col-sm-12">
 						<div class="flicker-photo">
 							<h2>Flicker Photo</h2>
@@ -1019,7 +1019,8 @@
 								<li><img src="img/g1.jpg" alt=""/></li>
 							</ul>
 						</div>
-					</div>								
+					</div>
+					-->
 				</div>
 			</div>
 		</div>
@@ -1034,7 +1035,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="copy-right ">
-						<p><img src="img/mps_logo.png" style="width: 15%"></p>
+						<p><a href="http://www.meltingpotsolutions.co"><img src="img/mps_logo.png" style="width: 15%"></a></p>
 					</div>
 				</div>
 			</div>
