--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<div class="slider-text">					
 					<div class="slider-wraper">					
 						<h1>Welcome To Our <span>Atlastitle</span></h1>
-						<p>You have a reasons. We have a solutions.</p>
+						<h1>You have a reasons <span><br>We have a solutions</span></h1>
 						<ul>
 							<li><a href="about.html">Read More</a></li>
 							<li><a href="contact.html">Contact Us</a></li>
@@ -145,7 +145,6 @@
 				<div class="slider-text">
 					<div class="slider-wraper">
 						<h1>We Provide <span>Verified & Secured</span> Service</h1>
-						<p>Lorem ipsum dolor sit amet, ligula magna at etiam aliquip venenatis. Vitae sit felis donec, suscipit tortor et sapien donec ac nec. Nam vel eu amet, nisl imperdiet nec ad morbi, sodales ipsum, consequat purus vitae integer maecenas.</p>
 						<ul>
 							<li><a href="#">Contact Us</a></li>
 							<li><a href="#">Read More</a></li>
@@ -156,7 +155,7 @@
 		</div>	
 	</div>
 	<!-- Slider Section End -->	
-	<!-- About Start -->
+	<!-- About Start
 	<div class="about-sec pt-100 pb-100">
 		<div class="about-sec-overlay"></div>
 		<div class="container">
@@ -205,7 +204,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<div class="sec-title">
-						<h1><span>Service We work with.. Why</span> you need Atlas Title?</h1>
+						<h1><span>We work with...</span></h1>
 
 					</div>
 				</div>
@@ -219,7 +218,8 @@
 								<div class="media-body">
 									<div class="service2-details">
 										<h2>RESIDENTIAL</h2>
-										<p>Title to a commercial property is generally more complex and involves a detailed escrow process. Saturn’s title agents are well prepared for it.</p>
+										<p>We are committed to enshuring the best quality service and standarts. Our Staff of highly qualified professional
+                                            are trained to assist you with any and all of your real estate needs.</p>
 									</div>
 								</div>
 							</div>
@@ -232,7 +232,7 @@
 								<div class="media-body">				
 									<div class="service2-details">						
 										<h2>COMMERCIAL</h2>
-										<p>Title to a commercial property is generally more complex and involves a detailed escrow process. Saturn’s title agents are well prepared for it.</p>
+										<p>Title to a commercial property is generally more complex and involves a detailed escrow process. Atlas’es title agents are well prepared for it.</p>
 									</div>							
 								</div>							
 							</div>							
@@ -245,7 +245,7 @@
 								<div class="media-body">
 									<div class="service2-details">
 										<h2>REFINANCING</h2>
-										<p>When it is time for you to refinance, you can choose your title company of preference, Saturn provides the tools for a very smooth closing.</p>
+										<p>When it is time for you to refinance, you can choose your title company of preference, Atlas provides the tools for a very smooth closing.</p>
 									</div>
 								</div>
 							</div>
@@ -358,6 +358,50 @@
 					<div class="all-testimonial">
 						<div class="single-testimonial">
 							<div class="client-comment">
+								<p>Regina at Atlas title did an excellent job closing a really difficult deal for us.
+                                    They are committed and went above and beyond to provide us great service.</p>
+							</div>						
+							<div class="clinet-inner">
+								<div class="client-thumb">
+									<img src="img/testimonial1.jpg" alt=""/>
+								</div>
+								<div class="client-info">
+									<h2>Keyur S.</h2>
+									<span>Washington, DC</span>
+									<div class="client-reviews">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star-half-empty"></i>								
+									</div>								
+								</div>							
+							</div>																				
+						</div>						
+						<div class="single-testimonial">
+							<div class="client-comment">
+								<p>Just closed on my first condo and ATG was very helpful in getting me prepared for the process and getting me all the paperwork I needed.
+                                    The staff is very helpful and friendly I was recommended by a friend and I would recommend to others!!</p>
+							</div>						
+							<div class="clinet-inner">
+								<div class="client-thumb">
+									<img src="img/testimonial2.jpg" alt=""/>
+								</div>
+								<div class="client-info">
+									<h2>Bethlehem A.</h2>
+									<span>Fairfax, VA</span>
+									<div class="client-reviews">
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star"></i>
+										<i class="fa fa-star-half-empty"></i>								
+									</div>								
+								</div>							
+							</div>																				
+						</div>			<!--
+						<div class="single-testimonial">
+							<div class="client-comment">
 								<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed</p>		
 							</div>						
 							<div class="clinet-inner">
@@ -397,49 +441,7 @@
 									</div>								
 								</div>							
 							</div>																				
-						</div>							
-						<div class="single-testimonial">
-							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed</p>		
-							</div>						
-							<div class="clinet-inner">
-								<div class="client-thumb">
-									<img src="img/testimonial1.jpg" alt=""/>
-								</div>
-								<div class="client-info">
-									<h2>panna rahman</h2>
-									<span>manager of iso</span>
-									<div class="client-reviews">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star-half-empty"></i>								
-									</div>								
-								</div>							
-							</div>																				
-						</div>						
-						<div class="single-testimonial">
-							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, luctus posuere semper felis consectetuer hendrerit, enim varius enim, tellus tincidunt tellus est sed</p>		
-							</div>						
-							<div class="clinet-inner">
-								<div class="client-thumb">
-									<img src="img/testimonial2.jpg" alt=""/>
-								</div>
-								<div class="client-info">
-									<h2>panna rahman</h2>
-									<span>manager of iso</span>
-									<div class="client-reviews">
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star"></i>
-										<i class="fa fa-star-half-empty"></i>								
-									</div>								
-								</div>							
-							</div>																				
-						</div>																													
+						</div>		-->
 					</div>			
 				</div>
 			</div>
